Fixed default video selection + wrapped up the app

--- a/src/components/videoItem.css
+++ b/src/components/videoItem.css
@@ -8,3 +8,8 @@
 .video-item.item img {
     max-width: 180px;
 }
+
+.title-link {
+    color: #480080 !important;
+}
+
